--- a/index.html
+++ b/index.html
@@ -3,114 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web3 AdSmart</title>
-    <link rel="icon" href="res/x-icon.png" type="image/png">
-    <link rel="stylesheet" href="res/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <script defer src="res/script.js"></script>
+    <title>OpenAD Protocol</title>
+    <link rel="icon" href="images/x-icon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Web3 AdSmart</h1>
-            <p>The Future of In-App Advertising</p>
-            <a href="#features" class="btn">Learn More</a>
-        </div>
+        <nav>
+            <a href="#advertizer">Advertizer</a>
+            <a href="#volume-owner">Volume Owner</a>
+            <a href="#our-bot">Our Bot</a>
+        </nav>
     </header>
-
-    <section id="features" class="section">
-        <div class="container">
-            <h2>Features</h2>
-            <div class="feature-grid">
-                <div class="feature">
-                    <i class="fas fa-brain"></i>
-                    <h3>Smart Ad Matching</h3>
-                    <p>Advanced algorithms to match ads to users and apps based on tags and preferences.</p>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-image"></i>
-                    <h3>Multi-Format Ad Support</h3>
-                    <p>Support for banners, images, videos, and more, providing flexibility for advertisers.</p>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-link"></i>
-                    <h3>Multi-Chain Integration</h3>
-                    <p>Integration with TON, Ethereum, Solana, and more for seamless ad transactions.</p>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-share-alt"></i>
-                    <h3>Social Media Integration</h3>
-                    <p>Serving ads on Telegram, WeChat, Snapchat, Twitter, and other platforms.</p>
-                </div>
+    <div class="main-banner">
+        <img src="images/main-banner.png" alt="Main Banner">
+        <div class="overlay">
+            <h1>OpenAD Protocol: Transforming the Future of In-App Advertising on Telegram</h1>
+            <p>We specialize in connecting products with their ideal audiences on Telegram, ensuring a strong start for their journey.</p>
+        </div>
+    </div>
+    <div class="section">
+        <img src="images/earn-revenue.png" alt="Earn Revenue">
+        <div class="overlay">
+            <h2>Earn revenue with your mini app</h2>
+            <p>Integrate our SDK into your mini app to start earning revenue while helping your audience discover great products.</p>
+        </div>
+    </div>
+    <div class="section">
+        <img src="images/jumpstart-product.png" alt="Jumpstart Your Product">
+        <div class="overlay">
+            <h2>Jumpstart Your Product</h2>
+            <p>Identify your target audience, and we'll deliver the clients right to your doorstep.</p>
+        </div>
+    </div>
+    <div class="features">
+        <h2>Features</h2>
+        <div class="feature-list">
+            <div class="feature">
+                <img src="images/smart-ad-matching.png" alt="Smart Ad Matching">
+                <h3>Smart Ad Matching</h3>
+                <p>Advanced algorithms to match ads to users and apps based on tags and preferences.</p>
+            </div>
+            <div class="feature">
+                <img src="images/multi-format-ad-support.png" alt="Multi-Format Ad Support">
+                <h3>Multi-Format Ad Support</h3>
+                <p>Support for banners, images, videos, and more, providing flexibility for advertisers.</p>
+            </div>
+            <div class="feature">
+                <img src="images/simple-sdk-integration.png" alt="Simple SDK Integration">
+                <h3>Simple SDK Integration</h3>
+                <p>Get the code and embed it anywhere you like.</p>
             </div>
         </div>
-    </section>
-
-    <section id="how-it-works" class="section">
-        <div class="container">
-            <h2>How It Works</h2>
-            <div class="steps">
-                <div class="step">
-                    <i class="fas fa-tags"></i>
-                    <h3>User and App Tagging</h3>
-                    <p>System categorizes users and apps based on their tags for better ad matching.</p>
-                </div>
-                <div class="step">
-                    <i class="fas fa-upload"></i>
-                    <h3>Ad Importing</h3>
-                    <p>Advertisers can import ads, which are then matched to relevant users.</p>
-                </div>
-                <div class="step">
-                    <i class="fas fa-tv"></i>
-                    <h3>Ad Display</h3>
-                    <p>Ads are displayed in-app and across various social media platforms.</p>
-                </div>
+    </div>
+    <div class="how-it-works">
+        <h2>How It Works</h2>
+        <div class="how-it-works-list">
+            <div class="how-it-works-step">
+                <img src="images/user-app-tagging.png" alt="User and App Tagging">
+                <h3>User and App Tagging</h3>
+                <p>System categorizes users and apps based on their tags for better ad matching.</p>
+            </div>
+            <div class="how-it-works-step">
+                <img src="images/ad-importing.png" alt="Ad Importing">
+                <h3>Ad Importing</h3>
+                <p>Advertisers can import ads, which are then matched to relevant users.</p>
+            </div>
+            <div class="how-it-works-step">
+                <img src="images/ad-display.png" alt="Ad Display">
+                <h3>Ad Display</h3>
+                <p>Ads are displayed in-app and across various projects.</p>
             </div>
         </div>
-    </section>
-
-    <section id="why-choose-us" class="section">
-        <div class="container">
-            <h2>Why Choose Web3 AdSmart?</h2>
-            <div class="benefits">
-                <div class="benefit">
-                    <i class="fas fa-bullseye"></i>
-                    <h3>Targeted Advertising</h3>
-                    <p>Ensuring high relevance and engagement for every ad displayed.</p>
-                </div>
-                <div class="benefit">
-                    <i class="fas fa-lock"></i>
-                    <h3>Blockchain Transparency</h3>
-                    <p>Integration with multiple blockchain networks for transparency and trust.</p>
-                </div>
-                <div class="benefit">
-                    <i class="fas fa-network-wired"></i>
-                    <h3>Cross-Platform Reach</h3>
-                    <p>Maximizing reach and effectiveness by serving ads on various platforms.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact" class="section">
-        <div class="container">
-            <h2>Get Started</h2>
-            <p>Join the future of in-app advertising with Web3 AdSmart.</p>
-            <p>Contact us today to learn more about how we can help you reach your advertising goals.</p>
-            <ul>
-                <li>Email: <a href="mailto:contact@xads.network">contact@xads.network</a></li>
-                <li>Telegram: <a href="https://t.me/">@</a></li>
-                <li>Twitter: <a href="https://twitter.com/">@</a></li>
-            </ul>
-        </div>
-    </section>
-
+    </div>
+    <div class="partners">
+        <h2>Our Partners</h2>
+    </div>
     <footer>
-        <div class="container">
-            <p>© 2024 Web3 AdSmart. All rights reserved.</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>About Us</h3>
+                <p>OpenAD Protocol is dedicated to transforming the future of in-app advertising on Telegram.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Contact</h3>
+                <p>Email: contact@openad.network</p>
+            </div>
+            <div class="footer-section">
+                <h3>Follow Us</h3>
+                <p><a href="#" target="_blank">Twitter</a></p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 OpenAD Protocol. All rights reserved.</p>
         </div>
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
-
