--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenAD Protocol</title>
     <link rel="icon" href="images/x-icon.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#advertizer">Advertizer</a>
-            <a href="#volume-owner">Volume Owner</a>
-            <a href="#our-bot">Our Bot</a>
+            <a href="https://t.me/OpenAD_protocol" target="_blank">Advertizer</a>
+            <a href="https://t.me/OpenAD_protocol" target="_blank">Volume Owner</a>
+            <a href="https://t.me/OpenAD_protocol" target="_blank">Our Bot</a>
         </nav>
     </header>
     <div class="main-banner">
@@ -82,17 +83,13 @@
     </div>
     <footer>
         <div class="footer-content">
-            <div class="footer-section">
+            <div class="footer-about">
                 <h3>About Us</h3>
                 <p>OpenAD Protocol is dedicated to transforming the future of in-app advertising on Telegram.</p>
             </div>
             <div class="footer-section">
-                <h3>Contact</h3>
-                <p>Email: contact@openad.network</p>
-            </div>
-            <div class="footer-section">
                 <h3>Follow Us</h3>
-                <p><a href="#" target="_blank">Twitter</a></p>
+                <a href="https://t.me/OpenAD_protocol" target="_blank"><i class="fab fa-telegram"></i></a>
             </div>
         </div>
         <div class="footer-bottom">
