--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="">
   <head>
     <title>OpenAD Official</title>
-    <meta name="author" content="GameWonderLab">
-    <meta name="keywords" content="game, game wonder, game wonder lab" />
-    <meta name="description" content="A revolution on behalf of the people of the game has begun. We call ourselves the Homo Ludens because we initiated the Game Epoch." />
-    <meta property="og:title" content="gamewonderlab.io – The great initiators of Game Epoch">
-    <meta property="og:description" content="A revolution on behalf of the people of the game has begun. We call ourselves the Homo Ludens because we initiated the Game Epoch.">
-    <meta property="og:site_name" content="GameWonderlab">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="./images/logo.jpg">
-    <meta prefix="og: http://ogp.me/ns#" />
-    <meta property="og:url" content="https://www.xads.network/" />
+  <link href="x-icon.jpg" mce_href="favicon.ico" rel="bookmark" type="image/x-icon" />
+  <link href="x-icon.jpg" mce_href="favicon.ico" rel="icon" type="image/x-icon" />
+  <link href="x-icon.jpg" mce_href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="author" content="OpenADProtocol">
+    <meta name="keywords" content="ad, ads, advertising, openad, openad protocol, openad network" />
+    <meta name="description" content="A revolution on behalf of the Web3 Advertising Ecosystem." />
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
