--- a/index.html
+++ b/index.html
@@ -1,182 +1,13 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <title>OpenAD Official</title>
-  <link href="x-icon.jpg" mce_href="favicon.ico" rel="bookmark" type="image/x-icon" />
-  <link href="x-icon.jpg" mce_href="favicon.ico" rel="icon" type="image/x-icon" />
-  <link href="x-icon.jpg" mce_href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <meta name="author" content="OpenADProtocol">
-    <meta name="keywords" content="ad, ads, advertising, openad, openad protocol, openad network" />
-    <meta name="description" content="A revolution on behalf of the Web3 Advertising Ecosystem." />
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta http-equiv="Cache-Control" content="no-transform"/>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <meta name="format-detection" content="telephone=no">
-    <meta name="layoutmode" content="standard">
-    <meta name="wap-font-scale" content="no">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
-    <meta name="screen-orientation" content="portrait">
-    <meta name="x5-orientation" content="portrait">
-    <meta name="renderer" content="webkit|ie-comp">
-    <link rel="icon" href="./images/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="./css/index.css" />
-	<script TYPE="text/javascript">
-        var docEl = document.documentElement;
-        function setRemUnit () {
-            var rem = docEl.clientWidth / 288;
-            docEl.style.fontSize = rem + 'px'
-        }
+<!DOCTYPE html><html lang=en><head><title>OpenAD Official</title><link href=./static/images/logo.png mce_href=./static/favicon.ico rel=bookmark type=image/x-icon><link href=./static/images/logo.png mce_href=./static/favicon.ico rel=icon type=image/x-icon><link href=./static/images/logo.png mce_href=./static/favicon.ico rel="shortcut icon" type=image/x-icon><meta name=author content="OpenAD Protocol"><meta name=keywords content="ad, ads, advertising, openad, openad protocol, openad network"><meta name=description content="A revolution on behalf of the Web3 Advertising Ecosystem."><meta charset=utf-8><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=apple-touch-fullscreen content=yes><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black><meta http-equiv=Cache-Control content=no-transform><meta http-equiv=Cache-Control content="no-cache, no-store, must-revalidate"><meta http-equiv=Pragma content=no-cache><meta http-equiv=Expires content=0><meta name=format-detection content="telephone=no"><meta name=layoutmode content=standard><meta name=wap-font-scale content=no><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"><meta name=screen-orientation content=portrait><meta name=x5-orientation content=portrait><meta name=renderer content=webkit|ie-comp><link rel=icon href=./static/favicon.ico><link href="./static/css/common.css?t=1720724056075" rel=stylesheet type=text/css><script type=text/javascript version=1.11.1 src=./static/js/jQuery.1.11.1.ajax.min.js></script><script type=text/javascript>/** 重定义字体的font-size **/
+    const docEl = document.documentElement;
+    const setRemUnit = () => {
+      const rem = docEl.clientWidth / 288; // 可根据不同电脑分辨率进行手动修改（如1920*1080 为19.2
+      docEl.style.fontSize = rem + 'px'
+    };
+    setRemUnit();
+    window.addEventListener('resize', setRemUnit);
+    window.addEventListener('pageshow',  (e)=> {
+      if (e.persisted) {
         setRemUnit();
-        window.addEventListener('resize', setRemUnit);
-        window.addEventListener('pageshow', function (e) {
-            if (e.persisted) {
-                setRemUnit();
-            }
-        });
-    </script>
-  </head>
-  <body>
-    <!---->
-    <header class="Flex" tag="SE">
-	    <div class="logo Flex">OpenAD Protocol</div>
-		<nav class="Flex">
-		    <li class="Flex select">For Advertisers</li>
-			<li class="Flex">For Volume Owner</li>
-			<li class="Flex">Our Channel</li>
-		</nav>
-	</header>
-	<!---->
-	<div class="banner MFlex">
-	    <div class="bg">
-		    <img src="./images/banner_bg.png" />
-		</div>
-		<h2 class="Flex">
-		    OpenAD <i>Protocol</i> : Decentralized In-App
-		</h2>
-		<h3 class="Flex">
-		    Ads Solution on Telegram
-		</h3>
-		<h4>Harnessing the power of smart contracts to instill trust and transparency in Telegram’s in-app advertising, ensuring every transaction is verifiable, secure, and trackable. Experience a transformation in digital advertising with our  cutting-edge technology, designed to prioritize integrity and clarity.</h4>
-	</div>
-	<!---->
-	<div class="service">
-        <div class="topBg">
-		    <img src="./images/service_top_bg.png" />
-		</div>
-		<div class="btn Flex">Beta Test</div>
-		<h2>Services</h2>
-		<h3>Earn revenue, <br />Jumpstart Your Product</h3>
-		<ul>
-		    <dl class="LFlex">
-		        <dt class="LFlex"><img src="./images/service_1.png" /></dt>
-		        <dd class="MFlex" tag="LM">
-				    <i>Earn revenue with your mini app</i>
-					<b>Integrate our SDK into your mini app to start earning revenue while helping your audience discover great products.</b>
-				</dd>
-			</dl>
-			<dl class="RFlex">
-		        <dt class="RFlex"><img src="./images/service_2.png" /></dt>
-		        <dd class="MFlex" tag="LM">
-				    <i>Jumpstart Your Product</i>
-					<b>Identify your target audience, and we' Il deliver the clients right to your doorstep.</b>
-				</dd>
-			</dl>
-		</ul>
-		<div class="bottomBg">
-		    <img src="./images/service_bottom_bg.png" />
-		</div>
-	</div>
-    <!---->
-	<div class="features">
-        <div class="topBg">
-		    <img src="./images/features_top_bg.png" />
-		</div>
-		<h2>Features</h2>
-		<div class="title MFlex">
-		    <h3 class="Flex"><i>“</i><b>Efficiently Acquire User Traffic</b><i>”</i></h3>
-			<h4>OpenAD Protocol, based on its powerful user profiling, can accurately identify the most suitable user groups, helping outstanding products accumulate early-stage traffic with the highest efficiency and lowest cost.</h4>
-		</div>
-		<ul class="Flex">
-		    <dl class="MFlex">
-			    <dt class="Flex"><img src="./images/features_1.png" /></dt>
-				<dd class="MFlex" tag="TM">
-				    <i>Smart Ad Matching</i>
-					<b>Advanced algorithms to match ads to users and apps based on tags and preferences.</b>
-				</dd>
-			</dl>
-			<dl class="MFlex">
-			    <dt class="Flex"><img src="./images/features_2.png" /></dt>
-				<dd class="MFlex" tag="TM">
-				    <i>Multi-Format Ad support</i>
-					<b>Support for banners, images, videos, and more, providing flexibility for advertisers.</b>
-				</dd>
-			</dl>
-			<dl class="MFlex">
-			    <dt class="Flex"><img src="./images/features_3.png" /></dt>
-				<dd class="MFlex" tag="TM">
-				    <i>Simple SDK Integration</i>
-					<b>Get the code and embed it anywhere you like.</b>
-				</dd>
-			</dl>
-		</ul>
-	</div>
-	<!---->
-	<div class="works">
-        <div class="topBg">
-		    <img src="./images/works_top_bg.png" />
-		</div>
-		<h2>How it works</h2>
-		<div class="Flex content" tag="SE">
-		    <div class="L MFlex" tag='LM'>
-			    <i>“</i>
-				<b>Transforming the Future of Web3 Advertising</b>
-				<em>Innovative Advertising Ecosystem.</em>
-			</div>
-		    <ul>
-				<dl class="Flex">
-					<dt class="LFlex"><img src="./images/works_1.png" /></dt>
-					<dd class="MFlex" tag="LM">
-						<i>User and App Tagging</i>
-						<b>System categorizes users and apps based on their tags for better ad matching.</b>
-					</dd>
-				</dl>
-				<dl class="Flex">
-					<dt class="LFlex"><img src="./images/works_2.png" /></dt>
-					<dd class="MFlex" tag="LM">
-						<i>Ad Importing</i>
-						<b>Advertisers can import ads, which are then matched to relevant users.</b>
-					</dd>
-				</dl>
-				<dl class="Flex">
-					<dt class="LFlex"><img src="./images/works_3.png" /></dt>
-					<dd class="MFlex" tag="LM">
-						<i>Ad Display</i>
-						<b>Ads are displayed in-app and across various Projects.</b>
-					</dd>
-				</dl>
-			</ul>
-		</div>
-		<div class="bottomBg">
-		    <img src="./images/works_bottom_bg.png" />
-		</div>
-	</div>
-	<!---->
-	<div class="embrace MFlex">
-	    <h2>Embrace the new era</h2>
-	    <div class="btn Flex">Beta Test</div>
-		<div class="bottomBg">
-		    <img src="./images/embrace_bottom_bg.png" />
-		</div>
-	</div>
-	<!---->
-	<footer class="LFlex">OpenAD Protocol</footer>
-	<!---->
-  </body>
-</html>
+      }
+    });</script><script defer=defer src=./assets/js/main.da989ab4bc56f80d4ee3.js></script><link href=./assets/css/main.style.da989ab4bc56f80d4ee3.css rel=stylesheet></head><body><div class="Flex Toggle-Loading"><svg class=Toggle-Loading-SVG width=240 height=240 viewBox="0 0 240 240"><circle class="Toggle-Loading-SVG-Ring Toggle-Loading-SVG-Ring-A" cx=120 cy=120 r=105 fill=none stroke=#000 stroke-width=20 stroke-dasharray="0 660" stroke-dashoffset=-330 stroke-linecap=round></circle><circle class="Toggle-Loading-SVG-Ring Toggle-Loading-SVG-Ring-B" cx=120 cy=120 r=35 fill=none stroke=#000 stroke-width=20 stroke-dasharray="0 220" stroke-dashoffset=-110 stroke-linecap=round></circle><circle class="Toggle-Loading-SVG-Ring Toggle-Loading-SVG-Ring-C" cx=85 cy=120 r=70 fill=none stroke=#000 stroke-width=20 stroke-dasharray="0 440" stroke-linecap=round></circle><circle class="Toggle-Loading-SVG-Ring Toggle-Loading-SVG-Ring-D" cx=155 cy=120 r=70 fill=none stroke=#000 stroke-width=20 stroke-dasharray="0 440" stroke-linecap=round></circle></svg></div><noscript><strong>We're sorry but OpenAD Official doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div></body></html>
