fix: replace keywords

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       rel="stylesheet"
     />
 
-    <title>Lombard Finance</title>
+    <title>OpenAD </title>
 
     <script type="module">
       import { Buffer } from 'buffer';
