--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/ico+xml" href="/favicon.ico" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -42,7 +42,7 @@
       rel="stylesheet"
     />
 
-    <title>OpenAD </title>
+    <title>OpenAD</title>
 
     <script type="module">
       import { Buffer } from 'buffer';
