--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <% } %>
     <meta name="environment" content="<%= env.VITE_ENV %>" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="icon" type="image/ico+xml" href="/favicon.ico" />
